[package]
name = "geoiprs"
version = "0.1.0"
authors = ["Ryoh Kawai <kawairyoh@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
maxminddb = "0.14.0"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
